# PwZN_Szym

proj1/: lab001.py  pyproject.toml
proj2/: proj2.py  pyproject.toml  test.txt
proj3/: proj3.py  pyproject.toml
proj4/: hacker.json  proj4.py  pyproject.toml
proj5/: proj5.py  pyproject.toml  test.json
proj6/: proj6.py  pyproject.toml  test.txt
proj7/: proj7.ipynb  pyproject.toml
